tests/cases/compiler-development/artifact/errors/diagnostic-parser-structural-capability-parameter.diagnostic
diagnostic error code=P0001 family=parser message="structural capability parameters are planned but not implemented" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-parser-structural-capability-parameter.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-parser-structural-capability-parameter.ari" bytes=95
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-structural-capability-parameter.ari" line=1 column=12 end_line=1 end_column=15 byte_start=11 byte_end=14 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-structural-capability-parameter.ari:1:12\n   |\n 1 | fn save(x: has serialize() -> String) -> i64 {\n   |            ^^^"
  Note index=0 location=none message="`has method(...) -> Type` is reserved for future parameter-local structural requirements"
  Help index=0 location=none message="define a named trait and use a generic bound today, such as `fn save[T: Serialize](x: T)`"
